<resources>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="recording_too_short">录音时间太短</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="app_name">答疑时间教师端</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to_load">上拉加载</string>
    <string name="refreshing">正在刷新</string>
    <string name="loading">正在加载</string>
    <string name="release_to_load">松开加载</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="login_has_expired">登录已过期，请重新登录！</string>
    <string name="landing">登录中…</string>
    <string name="phone_not_exist">绑定手机不存在</string>
    <string name="after_try_again">请检查您的网络或稍后再试</string>
    <string name="change_password_success">密码修改成功,请用新密码重新登陆</string>
    <string name="have_muted">你已被禁言</string>
    <string name="get_group_failed">获取群组信息失败!</string>
    <string name="you_have_quit_the_group">您已退出该群组</string>
    <string name="time_after_acquisition">S后重新获取</string>
    <string name="team">群组</string>
    <string name="message_can_not_null">消息不能为空</string>
    <string name="please_set_information">请设置个人信息</string>
    <string name="home_page">首页</string>
    <string name="time_table">课程表</string>
    <string name="resume_alert">恢复提醒</string>
    <string name="nolongger_alert">不再提醒</string>
    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="message">消息</string>
    <string name="individual">个人</string>
    <string name="code_send_success">验证码发送成功，请注意查收</string>
    <string name="code_error">验证码错误</string>
    <string name="code_send_failed">验证码发送失败,请稍后再试</string>
    <string name="phone_already_used">手机已经被使用</string>
    <string name="register_code_error">注册码错误</string>
    <string name="register_failed">注册失败</string>
    <string name="regiset_success">注册成功</string>
    <string name="please_set_head">请选择头像</string>
    <string name="server_error">服务器异常，请检查网络</string>
    <string name="login_failed">登录失败:&#8195;</string>
    <string name="latest">最新</string>
    <string name="whole">全部</string>
    <string name="by_time">按时间</string>
    <string name="by_subject">科目</string>
    <string name="by_grade">年级</string>
    <string name="price">价格范围</string>
    <string name="yuan">元</string>
    <string name="class_hours_range">课时范围</string>
    <string name="hours">课时</string>
    <string name="starting_range">开课时间</string>
    <string name="to">至</string>
    <string name="state">当前状态</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="by_price_up">按价格↑</string>
    <string name="by_price_down">按价格↓</string>
    <string name="alignprice">111</string>
    <string name="alignto">111111</string>
    <string name="comprehensive_sort">综合排序</string>
    <string name="in_price_low_to_high">按价格-低到高</string>
    <string name="in_price_high_to_low">按价格-高到低</string>
    <string name="in_number">按购买人数</string>
    <string name="recruiting">招生中</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="geography">地理</string>
    <string name="politics">政治</string>
    <string name="history">历史</string>
    <string name="science">科学</string>
    <string name="biology">生物</string>
    <string name="high3">高三</string>
    <string name="high2">高二</string>
    <string name="high1">高一</string>
    <string name="middle3">初三</string>
    <string name="middle2">初二</string>
    <string name="middle1">初一</string>
    <string name="primary6">六年级</string>
    <string name="primary5">五年级</string>
    <string name="primary4">四年级</string>
    <string name="primary3">三年级</string>
    <string name="primary2">二年级</string>
    <string name="primary1">一年级</string>
    <string name="course_to_be_done">未上课</string>
    <string name="course_finished">已上课</string>
    <string name="all_course">全部课程</string>
    <string name="personal_center">个人中心</string>
    <string name="my_order">我的订单</string>
    <string name="paying">待付款</string>
    <string name="paid">已付款</string>
    <string name="cancelled">已取消</string>
    <string name="my_course">我的辅导</string>
    <string name="today">今日</string>
    <string name="to_start">待开课</string>
    <string name="started">已开课</string>
    <string name="done">已结束</string>
    <string name="audition">试听</string>
    <string name="security_management">安全管理</string>
    <string name="setting">系统设置</string>
    <string name="new_edition">新版本</string>
    <string name="clip_photo">裁剪照片</string>
    <string name="personal_information">个人信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="grade">年级</string>
    <string name="region">地区</string>
    <string name="school">学校</string>
    <string name="profiles">简介</string>
    <string name="profiles_class">课程简介：</string>
    <string name="head">头像</string>
    <string name="click_to_change">点击更换</string>
    <string name="click_to_add">点击添加</string>
    <string name="hint_name">输入真实姓名更方便老师联系你</string>
    <string name="hint_profiles">一句话介绍自己</string>
    <string name="boy">我是男神</string>
    <string name="girl">我是女神</string>
    <string name="finish">完成</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="change_information_successful">个人资料修改成功！</string>
    <string name="id_is_empty">ID为空</string>
    <string name="tutor_information">辅导班详情</string>
    <string name="detail_of_order">订单详情</string>
    <string name="waiting_for_payment">等待付款</string>
    <string name="order_number">订单编号</string>
    <string name="time_built">创建时间</string>
    <string name="time_payment">支付时间</string>
    <string name="method_payment">支付方式</string>
    <string name="amount_payment">应付金额</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="reorder">重新购买</string>
    <string name="pay">付款</string>
    <string name="deal_closed">交易关闭</string>
    <string name="order_confirm">订单确认</string>
    <string name="pay_confirm">支付确认</string>
    <string name="commodity_name">商品名称</string>
    <string name="commodity_detail">商品详情</string>
    <string name="teacher_detail">教师资料</string>
    <string name="course_list">课程列表</string>
    <string name="Join_the_audition">加入试听</string>
    <string name="Joined_the_audition">已加入试听</string>
    <string name="purchase_now">立即购买</string>
    <string name="purchased">已购买</string>
    <string name="no_tutorial_classes_ID">没有辅导班ID</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="verification_code">请输入验证码</string>
    <string name="verification_code_is_incorrect">验证码不正确</string>
    <string name="change_it">看不清，换一张？</string>
    <string name="logout">退出登录</string>
    <string name="press_another_exit">再按一次退出程序</string>
    <string name="set_for_login">设置登录</string>
    <string name="get_verification_code">获取校验码</string>
    <string name="hint_input_verification_code">输入校验码</string>
    <string name="hint_input_code">输入验证码</string>
    <string name="hint_phone_number">请输入大陆地区11位手机号码</string>
    <string name="hint_input_password">输入登录密码</string>
    <string name="hint_confirm_password">确认登录密码</string>
    <string name="hint_qatime_register_code">请输入答疑时间注册码</string>
    <string name="agree">同意</string>
    <string name="agreement">《答疑时间用户协议》</string>
    <string name="phone_number_is_incorrect">手机号码不正确</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="name_can_not_be_empty">姓名不能为空</string>
    <string name="grade_can_not_be_empty">年级不能为空</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="password_and_repassword_are_incongruous">前后密码不一致</string>
    <string name="enter_the_verification_code">请输入验证码</string>
    <string name="enter_the_register_code">请输入注册码</string>
    <string name="next">下一步</string>
    <string name="information_perfect">完善信息</string>
    <string name="press_again_to_exit">再按一次退出程序</string>
    <string name="hint_phone_number_forget">请输入绑定手机号码</string>
    <string name="hint_password_forget">请输入新密码</string>
    <string name="find_password">找回密码</string>
    <string name="class_name">课程名称：</string>
    <string name="subject_type">科目类型：</string>
    <string name="teacher">授课教师：</string>
    <string name="progress">课程进度：</string>
    <string name="teach_way">授课方式：</string>
    <string name="remain_class">剩余课时：</string>
    <string name="total_class_hours">课时总数：</string>
    <string name="class_end_time">结课时间：</string>
    <string name="class_start_time">开课时间：</string>
    <string name="status_preview">当前状态：招生中</string>
    <string name="status_teaching">当前状态：已开课</string>
    <string name="status_over">当前状态：已结束</string>
    <string name="grade_type">授课类型：</string>
    <string name="teacher_name">老师姓名：</string>
    <string name="teacher_years">执教年龄：</string>
    <string name="within_three_years">3年以内</string>
    <string name="within_ten_years">3-10年</string>
    <string name="more_than_ten_years">20年以上</string>
    <string name="within_twenty_years">10-20年</string>
    <string name="teacher_subject">授课科目：</string>
    <string name="teacher_school">所在学校：</string>
    <string name="teacher_introduction">自我介绍：</string>
    <string name="class_teaching">直播中</string>
    <string name="class_init">未开始</string>
    <string name="class_ready">待上课</string>
    <string name="class_wait">待补课</string>
    <string name="class_paused_inner">暂停中</string>
    <string name="class_over">已结束</string>
    <string name="class_closed">已直播</string>
    <string name="use">使用</string>
    <string name="fail_pay">不能支付</string>
    <string name="payment_result">支付结果</string>
    <string name="pay_failure">支付结果未找到</string>
    <string name="pay_success">支付成功</string>
    <string name="button_commit">提交</string>
    <string name="wechat_payment">微信支付</string>
    <string name="alipay_payment">支付宝支付</string>
    <string name="pay_now">立即支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="payment_results_are_being_queried">正在查询支付结果</string>
    <string name="remedial_class_message">辅导班消息</string>
    <string name="system_message">系统消息</string>
    <string name="item_teacher">老师：</string>
    <string name="current_phone">当前手机号码</string>
    <string name="getcode">获取验证码</string>
    <string name="hint_input_email">请输入完整邮箱地址</string>
    <string name="over">完成</string>
    <string name="public_course">公开课课程</string>
    <string name="remind_me">提醒我</string>
    <string name="sms_notify">短信通知</string>
    <string name="sys_notify">系统通知</string>
    <string name="time_setting">设置时间</string>
    <string name="Remedial_classes">辅导班课程</string>
    <string name="advance">提前</string>
    <string name="alert_mode">提醒方式</string>
    <string name="class_range">课程范围</string>
    <string name="hint_input_alipay_account">请输入支付宝账号</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="withdraw_cash_now">立即提现</string>
    <string name="nick_name">昵称</string>
    <string name="teaching_years">教龄</string>
    <string name="teach_type">类型</string>
    <string name="subject">科目</string>
</resources>