<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <include layout="@layout/layout_backbar" />

    <LinearLayout style="@style/edit_layout_style">

        <EditText
            android:id="@+id/name"
            style="@style/activity_edit_text_style"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/input_real_name" />

        <EditText
            android:id="@+id/account"
            style="@style/activity_edit_text_style"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_alipay_account"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/withdraw_cash_now"
        style="@style/button_full_width_style"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:text="@string/withdraw_cash_now"
        android:textColor="@drawable/text_selector_white_red" />
</LinearLayout>