<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_backbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/head_sculpture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@mipmap/personal_information_head" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_text_style"
                    android:text="@string/nick_name" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/nick_name"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style" />

            </LinearLayout> <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_text_style"
                    android:text="@string/name" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/name"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_text_style"
                    android:text="@string/sex" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/sex"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style"
                    android:text="@string/male" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="24dp"
                    style="@style/setting_text_style"
                    android:text="@string/birthday" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="24dp"
                    style="@style/setting_text_style"
                    android:text="@string/teaching_years" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/teaching_years"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style"
                    android:text="5-10年" />

            </LinearLayout>  <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="24dp"
                    style="@style/setting_text_style"
                    android:text="@string/teach_type" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/teach_type"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style"
                    android:text="高中" />

            </LinearLayout>  <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="24dp"
                    style="@style/setting_text_style"
                    android:text="@string/subject" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/subject"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style"
                    android:text="体育" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="24dp"
                    style="@style/setting_text_style"
                    android:text="@string/school" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/school"
                    android:layout_marginRight="12dp"
                    style="@style/setting_text_style"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="24dp"
                    style="@style/setting_text_style"
                    android:text="@string/profiles" />

                <TextView
                    android:id="@+id/describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdddd" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
