<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_backbar" />

    <LinearLayout style="@style/edit_layout_style">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textColor="#666"
                android:text="@string/current_phone" />

            <TextView
                android:id="@+id/current_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:textSize="13sp"
                android:textColor="#666" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/code"
                style="@style/activity_edit_text_style"
                android:inputType="number" />

            <TextView
                android:id="@+id/text_getcode"
                style="@style/button_style_with_edit"
                android:text="@string/getcode"
                android:textColor="@drawable/text_selector_white_red" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        style="@style/button_full_width_style"
        android:text="@string/next" />
</LinearLayout>