<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_backbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dfdddd" />

    <LinearLayout
        android:id="@+id/security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/setting_text_style"
            android:text="@string/security_management" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            style="@style/setting_icon_margin_right"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/personal_enter" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dfdddd" />

    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/setting_text_style"
            android:text="@string/setting" />

        <TextView
            android:id="@+id/new_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:paddingTop="12dp"
            android:text="@string/new_edition"
            android:textColor="#e20914"
            android:textSize="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <ImageView
            style="@style/setting_icon_margin_right"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/personal_enter" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dfdddd" />
</LinearLayout>